css/styles.css
/* Fonts */
/* To-do: this doesn't work yet */
@font-face {
   font-family: 'baseninesc' ;
   src: url('../fonts/BaseNinSC.ttf') format('truetype');
}

/* 1st bar above lgo */
.top-bar {
  height: 5em;
  background: #3D3935;
  border-bottom: .5em solid #F4F3E0;
}

/* bar behind diamond logo */
.second-bar{
  height: 14em;
  background: #3D3935;
}

/* large diamond logo above nav */
.logo {
  margin-top: -26.5em;
  position: relative;
}

.main-logo {
  height: 30em;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* Nav bar */
.category-navbar{
  margin-top: 0em;
  background-color: #3D3935;
  border-top: .5em solid #F4F3E0;
  border-bottom: .5em solid #F4F3E0;
}

.nav-item{
  font-size: 2em;
}

.nav-link {
  color: #F4F3E0;
  text-shadow: 2px 2px 8px black;
}

.beer {
  padding-left: 4em;
}

.visit {
  padding-left: 5em;
}

.gear {
  padding-left: 14em;
}

/* .dropdown-menu{
  padding-left: 56em;
  background-color: #3D3935;
} */

.about {
  padding-left: 4em;
  padding-right: 4em;
}

.gear {
  font-family:'baseninesc';
}

/* Hero Image */
.hero-image {
  height: 30em;
  margin-top: -3em;
  background: url('../img/BreweryBranding_Winter2020-4_websize.jpg');
  background-position-y: -26em;
  background-position-x: 0em;
  background-repeat: no-repeat;
  border-bottom: 1.5em solid #F4F3E0;

}

.beer-gear{
  padding-left: 9em;
  padding-top: 3.5em;
  font-size: 6em;
  color: #F4F3E0;
  font-family:'baseninesc';
  text-shadow: 2px 2px 8px black;
}

.blocks{
  height: 30em;
  border-top: 1.5em solid #F4F3E0;
  border-bottom: 1.5em solid #F4F3E0;
  border-left: 1em solid #F4F3E0;
  border-right: 1em solid #F4F3E0;
}

/* First row of category images */

/* New Gear */
.new-gear{
  background: url('../img/BreweryBranding_Winter2020-18_websize.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: -6em;
  border-right: .5em solid #F4F3E0;
}

.new-gear:hover {
  cursor: pointer;
}

.new-gear-text {
  text-align: center;
  padding-top: 3em;
  font-size: 4em;
  color: #F4F3E0;
  font-family:'baseninesc';
  text-shadow: 2px 2px 8px black;
}

/* Ladies */
.ladies{
  background: url('../img/BreweryBranding_Winter2020-14_websize.jpg');
  border-left: .5em solid #F4F3E0;
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: -6em;
}

.ladies:hover {
  cursor: pointer;
}

.ladies-text {
  text-align: center;
  padding-top: 3em;
  font-size: 4em;
  color: #F4F3E0;
  font-family:'baseninesc';
  text-shadow: 2px 2px 8px black;
}

/* Second row of category images */

/* Mens */

.mens{
  background: url('https://github.com/alexskreen/Kelly-Point-Brewing/blob/master/img/BreweryBranding_5Panel_HollyHursley-9_websize.jpg?raw=true');
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: -6em;
  border-right: .5em solid #F4F3E0;
}

.mens:hover {
  cursor: pointer;
}

.mens-text {
  text-align: center;
  padding-top: 3.25em;
  font-size: 4em;
  color: #F4F3E0;
  font-family:'baseninesc';
  text-shadow: 2px 2px 8px black;
}

/* Hats */
.hats{
  background: url('../img/BreweryBranding_5Panel_HollyHursley-5_websize.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: -6em;
  border-left: .5em solid #F4F3E0;
  border-right: .5em solid #F4F3E0;
}

.hats:hover {
  cursor: pointer;
}

.hats-text {
  text-align: center;
  padding-top: 3em;
  font-size: 4em;
  color: #F4F3E0;
  font-family:'baseninesc';
  text-shadow: 2px 2px 8px black;
}

/* Merch */
.merch{
  background: url('https://github.com/alexskreen/Kelly-Point-Brewing/blob/master/img/BreweryBranding_Winter2020-21_websize.jpg?raw=true');
  background-size: cover;
  background-repeat: no-repeat;
  border-left: .5em solid #F4F3E0;
}

.merch:hover {
  cursor: pointer;
}

.merch-text {
  text-align: center;
  padding-top: 3em;
  font-size: 4em;
  color: #F4F3E0;
  font-family:'baseninesc';
  text-shadow: 2px 2px 8px black;
}

/* Keep In Touch bar */

.KIT-bar{
  background: #ADC6CA;
  height: 6.5em;
}

.KIT{
  height: 3em;
  width: 50em;
  position: relative;
  margin: 0 auto;
  padding-top: .0625em;
  padding-bottom: .0625em;
  text-align: center;
  font-family:'baseninesc';
}

.fab {
  padding-left: .5em;
  padding-right: .5em;
}

.fab:hover {
  cursor: pointer;
}

hr {
  border-color: #F4F3E0;
  background-color: #F4F3E0;
  border: none;
  opacity: 1;
}

/* Bottom Nav Bar */

.bottom-nav {
  height: 24em;
  padding-top: 4em;
  padding-bottom: 4em;
}

.bottom-nav-text {
  text-align: center;
  font-family: 'baseninesc';
  font-size: 2em;
}

.footer-icon {
  padding-right: .5em;
}

.brewery-details {
  padding-top: .25em;
  text-align: center;
  font-size: 1em;
  color: grey;
}

.brewery-time {
padding-right: 3em;
}

.brewery-phone {
padding-right: 3.5em;
padding-top: 1em;
}

.bottom-nav-beer {
  border-left: 5px solid grey;
}

.footer-details {
  padding-top: 1.5em;
}

.footer-details p:hover {
  cursor: pointer;
}

.footer-details-text {
  text-align: center;
  font-family: 'baseninesc';
  font-size: 1.25em;
  color: grey;
}

/* Footer */

.footer {
  background-color: #3D3935;
  text-align: center;
  padding-top: 2em;
  padding-bottom: 2em;
}

.footer h3 {
  display: inline;
  font-family: 'baseninesc';
  font-size: 2em;
  padding: 1em;
  color: #F4F3E0;
  padding-bottom: 1em;
}

.footer-links h3:hover {
  cursor: pointer;
}

.copyright {
  background-color: #3D3935;
  text-align: center;
  font-size: 1.25em;
  color: grey;
  letter-spacing: .2em;
  /* padding-top: 2em;
  padding-bottom: 2em; */
}

